--- a/ProjectX/Base.lproj/Main.storyboard
+++ b/ProjectX/Base.lproj/Main.storyboard
@@ -15,7 +15,51 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="D7t-zf-q3T" userLabel="SignUpButton">
+                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                                <state key="normal" title="Sign Up">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IcM-En-58d" userLabel="OrLabel">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="D7t-zf-q3T" secondAttribute="bottom" constant="100" id="H3b-qB-Bz5"/>
+                            <constraint firstAttribute="centerX" secondItem="IcM-En-58d" secondAttribute="centerX" id="Sg4-Ql-Hfa"/>
+                            <constraint firstItem="D7t-zf-q3T" firstAttribute="top" secondItem="IcM-En-58d" secondAttribute="bottom" constant="50" id="cRL-NS-dOj"/>
+                            <constraint firstAttribute="centerX" secondItem="D7t-zf-q3T" secondAttribute="centerX" id="oU3-Rf-UPC"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="D7t-zf-q3T"/>
+                                <exclude reference="IcM-En-58d"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="Sg4-Ql-Hfa"/>
+                                <exclude reference="cRL-NS-dOj"/>
+                                <exclude reference="oU3-Rf-UPC"/>
+                                <exclude reference="H3b-qB-Bz5"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="D7t-zf-q3T"/>
+                                <include reference="IcM-En-58d"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="Sg4-Ql-Hfa"/>
+                                <include reference="cRL-NS-dOj"/>
+                                <include reference="oU3-Rf-UPC"/>
+                                <include reference="H3b-qB-Bz5"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
